force-app/main/default/objects/shareconnect__File__c/fields/shareconnect__Description__c.field-meta.xml
<CustomField>
    <fullName>shareconnect__Description__c</fullName>
    <label>Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>