force-app/main/default/objects/shareconnect__File__c/fields/shareconnect__File_Extension__c.field-meta.xml
<CustomField>
    <fullName>shareconnect__File_Extension__c</fullName>
    <description>The suffix added to the name of a file to indicate the file&apos;s layout.</description>
    <label>File Extension</label>
    <length>255</length>
    <type>Text</type>
</CustomField>