force-app/main/default/objects/shareconnect__File__c/fields/shareconnect__File_Id__c.field-meta.xml
<CustomField>
    <fullName>shareconnect__File_Id__c</fullName>
    <description>The ID of the Salesforce Content Document record that the file is related to.</description>
    <label>File ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>