force-app/main/default/objects/shareconnect__File__c/fields/shareconnect__File_Location__c.field-meta.xml
<CustomField>
    <fullName>shareconnect__File_Location__c</fullName>
    <description>The location where the file is being stored.</description>
    <label>File Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>