force-app/main/default/objects/shareconnect__File__c/fields/shareconnect__File_Type__c.field-meta.xml
<CustomField>
    <fullName>shareconnect__File_Type__c</fullName>
    <description>The media type (also known as a Multipurpose Internet Mail Extensions or MIME type) of the file.</description>
    <label>File Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>