force-app/main/default/objects/shareconnect__File__c/fields/shareconnect__File_URL__c.field-meta.xml
<CustomField>
    <fullName>shareconnect__File_URL__c</fullName>
    <description>The url representing the link to the files location.</description>
    <label>File URL</label>
    <type>Url</type>
</CustomField>