force-app/main/default/objects/shareconnect__File__c/fields/shareconnect__Marked_for_Delete__c.field-meta.xml
<CustomField>
    <fullName>shareconnect__Marked_for_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines whether the file should get deleted.</description>
    <label>Marked for Delete</label>
    <type>Checkbox</type>
</CustomField>