force-app/main/default/objects/shareconnect__File__c/fields/shareconnect__Object__c.field-meta.xml
<CustomField>
    <fullName>shareconnect__Object__c</fullName>
    <description>The type of Salesforce object that the file is attached to.</description>
    <label>Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>