force-app/main/default/objects/shareconnect__File__c/fields/shareconnect__Size__c.field-meta.xml
<CustomField>
    <fullName>shareconnect__Size__c</fullName>
    <description>The measure of space that the file takes up in the location it is stored on.</description>
    <label>Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>